examples/errors/redefined_function/main.hd
fn greet(): int {
    return 1;
}

fn greet(): int {
    return 2;
}

fn main(): int {
    return greet();
}
